--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "express": "^4.17.1",
     "next": "^12.2.4",
     "rc-table": "^7.26.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.1.6",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4",
-    "express": "^4.17.1"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
   },
-
   "scripts": {
     "start": "react-scripts start && backend backed.js",
     "build": "CI=false && react-scripts build",
@@ -51,5 +51,4 @@
     ]
   },
   "proxy": "http://localhost:3001/"
-  
 }
