--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.11.2",
+    "@fullcalendar/react": "^5.11.2",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
@@ -11,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "next": "^12.2.4",
     "rc-table": "^7.26.0",
     "react": "^18.2.0",
